lab21/configs/iptables
*nat
:PREROUTING ACCEPT [163:9928]
:INPUT ACCEPT [8:628]
:OUTPUT ACCEPT [362:26913]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [0:0]
:TRAFFIC - [0:0]
:SSH-STEP-2 - [0:0]
:SSH-STEP-3 - [0:0]

# To get access to the SSH port, knocking three times is requred in follow way: 32871/TCP -> 32277/TCP -> 27196/TCP
-A INPUT -s 192.168.255.2/32 -j TRAFFIC
-A TRAFFIC -m state --state ESTABLISHED,RELATED -j ACCEPT
-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name KNOCK3 -j ACCEPT

-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name KNOCK3 --remove -j DROP

-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 27196 -m recent --rcheck --name KNOCK2 -j SSH-STEP-3
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name KNOCK2 --remove -j DROP

-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 32277 -m recent --rcheck --name KNOCK1 -j SSH-STEP-2
-A TRAFFIC -m state --state NEW -m tcp -p tcp -m recent --name KNOCK1 --remove -j DROP

-A TRAFFIC -m state --state NEW -m tcp -p tcp --dport 32871 -m recent --name KNOCK1 --set -j DROP
-A SSH-STEP-2 -m recent --name KNOCK2 --set -j DROP
-A SSH-STEP-3 -m recent --name KNOCK3 --set -j DROP 
-A TRAFFIC -j DROP
COMMIT
